@@ -248,10 +248,18 @@ request.
 
 =head2 What does "Premature connection close" mean?
 
-This error message is often related to the one above, and means that the web
-server closed the connection before the user agent could receive the whole
-response or that the user agent got destroyed, which forces all connections to
-be closed immediately.
+On the I<client-side> this message is often related to the one above, and means
+that the web server closed the connection before the user agent could receive
+the whole response, or that the user agent got destroyed, which forces all
+connections to be closed immediately.
+
+On the I<server-side> this message means that the user agent closed the
+connection before the web server could send the whole response. While this is
+generally harmless in itself, special care must be taken for non-blocking
+operations that might still be active, because once the connection has been
+closed L<Mojolicious::Controller/"tx"> will no longer be available. In such
+cases you can use events like L<Mojolicious::Transaction/"finish"> for cleaning
+up, or keep an extra reference to the transaction object.
 
 =head2 What does "Worker 31842 has no heartbeat, restarting" mean?
 
